Yeong-Huns/src/main/java/org/example/yeonghuns/config/Error/exception/member/MemberNotFoundException.java
package org.example.yeonghuns.config.Error.exception.member;

import org.example.yeonghuns.config.Error.ErrorCode;
import org.example.yeonghuns.config.Error.exception.NotFoundException;

public class MemberNotFoundException extends NotFoundException {
    public MemberNotFoundException() {
        super(ErrorCode.MEMBER_NOT_FOUND);
    }
}
